spacing fix

--- a/react_webviews/src/kyc/Aoc/pages/PaymentStatus.scss
+++ b/react_webviews/src/kyc/Aoc/pages/PaymentStatus.scss
@@ -44,6 +44,7 @@
       font-weight: 500;
       color: var(--gunmetal);
       line-height: 17px;
+      padding-bottom: 3px;
     }
   }
 
